nginx-plus-ingress/k8s/monitoring/monitoring-alertmanager-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operator-alertmanager
          servicePort: 9093
